= Changelog

To download stable release, please use "switch tags" button and point to the latest release link.

== Head - unstable

== Release v3.1.0

* CHANGE: major css id name changes for removing the conflict with other systems

== Release v3.0.2

* NEW: QuranNavigator.js made independent (removed layout requirement from it)
* NEW: QuranNavigator.displayStartup & QuranNavigator.display added for overwriting in your own javascript functions.
* NEW: QuranNavigator.noData added for using the player only - Quran text will not be pulled on navigation value changes (ex: next page, next surah...)
* NEW: QuranNavigator.setup added for making your own custom player with your own function (replace it).
* NEW: added demo folder
* NEW: added audioOnly demo
* NEW: delay added on audio recitations.
* FIX: buffer fixed for html5 solution.

== Release v3.0.1

* NEW: prev & next recitation if playing.
* NEW: stop function
* FIX: jump on new audio verse, if selection was jump also (ex: changing surah, juz, page and ayah).
* FIX: modified auto-html file.
* FIX: stop's at the end of last verse of last surah (114:6) 
* Fix: tool bar resize for smaller having it inside a smaller div - auto-html
* CHANGED: end (keyboard) will go to 114:1 ayah - the last surah, but first ayah of surah.

== Release v3.0.0

* NEW: our first official release